--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                     crafted with quality and care.
                 </p>
             </div>
-                <button><a href="#sellers">SHOP NOW</a><i class='bx bx-right-arrow-alt'></i></button>
-                <div class="home_social_icons">
+                <button><a href="products.html">SHOP NOW</a><i class='bx bx-right-arrow-alt'></i></button>
+                <!-- <div class="home_social_icons">
                     <a href="#"><i class='bx bxl-facebook'></i></a>
                     <a href="#"><i class='bx bxl-twitter'></i></a>
                     <a href="#"><i class='bx bxl-pinterest'></i></a>
                     <a href="#"><i class='bx bxl-instagram'></i></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -155,45 +155,46 @@
         </section>
             <section id="news">
                 <div class="news-heading">
-                    <p>LATEST NEWS</p>
-                    <h2>Fashion New Trends</h2>
+                    <p>Our Happy Customers</p>
+                    <h2>Reviews</h2>
                 </div>
                 <div class="l-news container">
                     <div class="l-news1">
                         <div class="news1-img">
-                            <img src="https://i.postimg.cc/2y6wbZCm/news1.jpg" alt="img">
+                            <img src="/assets/home/customers/c1.webp" alt="img">
                         </div>
                         <div class="news1-conte">
                             <div class="date-news1">
-                                <p><i class='bx bxs-calendar'></i> 12 February 2022</p>
-                                <h4>What Curling Irons Are The Best Ones</h4>
-                                <a href="https://www.vogue.com/article/best-curling-irons" target="_blank">read more</a>
+                                <p><i class='bx bxs-calendar'></i> 12 October 2022</p>
+                                <h4>Kongposh is the best dry fruit shop in Kashmir, offering premium quality almonds, walnuts, and saffron at great prices.
+                                Their freshness and authentic taste make them unbeatable!.</h4>
+                                <a href="" target=""><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="l-news2">
                         <div class="news2-img">
-                            <img src="https://i.postimg.cc/9MXPK7RT/news2.jpg" alt="img">
+                            <img src="/assets/home/customers/c3.webp" alt="img">
                         </div>
                         <div class="news2-conte">
                             <div class="date-news2">
-                                <p><i class='bx bxs-calendar'></i> 17 February 2022</p>
-                                <h4>The Health Benefits Of Sunglasses</h4>
-                                <a href="https://www.rivieraopticare.com/blog/314864-the-health-benefits-of-wearing-sunglasses_2/"
-                                    target="_blank">read more</a>
+                                <p><i class='bx bxs-calendar'></i> 17 September 2024</p>
+                                <h4>We recently visited Kongposh in Kashmir and was impressed by their wide variety of dry fruits. The top-notch quality and
+                                friendly service make it my go-to place for dried delicacies.</h4>
+                                <a href=""><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star'></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="l-news3">
                         <div class="news3-img">
-                            <img src="https://i.postimg.cc/x1KKdRLM/news3.jpg" alt="img">
+                            <img src="/assets/home/customers/c2.webp" alt="img">
                         </div>
                         <div class="news3-conte">
                             <div class="date-news3">
-                                <p><i class='bx bxs-calendar'></i> 26 February 202</p>
-                                <h4>Eternity Bands Do Last Forever</h4>
-                                <a href="https://www.briangavindiamonds.com/news/eternity-bands-symbolize-love-that-lasts-forever/"
-                                    target="_blank">read more</a>
+                                <p><i class='bx bxs-calendar'></i> 20 August 2024</p>
+                                <h4>Kongposh delivers the true essence of Kashmir with its selection of dry fruits. The quality, taste, and customer service
+                                are simply exceptional – highly recommend this shop!</h4>
+                                <a href=""><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star-fill'></i><i class='bi bi-star'></i></a>
                             </div>
                         </div>
                     </div>
@@ -221,9 +222,9 @@
         <div class="content_3">
             <h4>SUPPORT</h4>
             <a href="#contact">Contact Us</a>
-            <a href="https://payment-method-sb.netlify.app/" target="_blank">Payment Method</a>
-            <a href="https://delivery-status-sb.netlify.app/" target="_blank">Delivery Information</a>
-            <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank">Return & Exchange</a>
+            <a href="" target="_blank">Payment Method</a>
+            <a href="" target="_blank">Delivery Information</a>
+            <a href="" target="_blank">Return & Exchange</a>
         </div>
 
         <div class="content_4">
