--- a/products.html
+++ b/products.html
@@ -100,18 +100,18 @@
           <a href="#sellers">Almonds & Saffron</a>
           <a href="#sellers">Dried Fruits & Berries</a>
           <a href="#sellers">Gift Boxes</a>
-        </div>
+        </div>  
 
         <div class="content_3">
           <h4>SUPPORT</h4>
           <a href="#contact">Contact Us</a>
-          <a href="https://payment-method-sb.netlify.app/" target="_blank"
+          <a href="" target="_blank"
             >Payment Method</a
           >
-          <a href="https://delivery-status-sb.netlify.app/" target="_blank"
+          <a href="" target="_blank"
             >Delivery Information</a
           >
-          <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank"
+          <a href="" target="_blank"
             >Return & Exchange</a
           >
         </div>
@@ -123,8 +123,8 @@
             fruits, seasonal collections, and exclusive discounts!
           </p>
           <div class="f-mail">
-            <input type="email" placeholder="Your Email" />
-            <i class="bx bx-envelope"></i>
+            <!-- <input type="email" placeholder="Your Email" /> -->
+           <a href="#contact"><i class="bx bx-envelope"></i></a>
           </div>
           <hr />
         </div>
