--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <a href="tel:+917051807964" target="_blank">
                     <i class="bi bi-phone"></i> 7051807964
                 </a>
+                ||
+                <a href="tel:+917006204613" target="_blank">
+                    <i class="bi bi-phone"></i> 7006204613
+                </a>
+                
             </p>
         </div>
         <div class="sign_in_up">
@@ -131,7 +136,10 @@
                             and customer satisfaction is at the heart of everything we do.</span>
                         <h3>India</h3>
                         <p><a href="tel:+917006541433" target="_blank"><i class="bi bi-phone"></i> 7006541433</a> || <a
-                                href="tel:+917051807964" target="_blank"><i class="bi bi-phone"></i> 7051807964</a></p>
+                                href="tel:+917051807964" target="_blank"><i class="bi bi-phone"></i> 7051807964</a>||
+                                <a href="tel:+917006204613" target="_blank">
+                                    <i class="bi bi-phone"></i> 7006204613
+                                </a></p>
                         <h3>Our Location</h3>
                         <p>Kammu And Kashmir Lethpora.<br>192122</p>
                     </div>
@@ -215,27 +223,27 @@
             <h4>SHOP OUR COLLECTION</h4>
             <a href="#sellers">Kashmiri Walnuts</a>
             <a href="#sellers">Almonds & Saffron</a>
-            <a href="#sellers">Dried Fruits & Berries</a>
+            <a href="products.html">Dried Fruits & Berries</a>
             <a href="#sellers">Gift Boxes</a>
         </div>
 
         <div class="content_3">
             <h4>SUPPORT</h4>
             <a href="#contact">Contact Us</a>
-            <a href="" target="_blank">Payment Method</a>
+            <!-- <a href="" target="_blank">Payment Method</a>
             <a href="" target="_blank">Delivery Information</a>
-            <a href="" target="_blank">Return & Exchange</a>
+            <a href="" target="_blank">Return & Exchange</a> -->
         </div>
 
         <div class="content_4">
-            <h4>SUBSCRIBE TO OUR NEWSLETTER</h4>
+            <h4>Visit Us</h4>
             <p>Stay updated on our latest offerings of authentic Kashmiri dry fruits, seasonal collections, and
                 exclusive
                 discounts!</p>
-            <div class="f-mail">
+            <!-- <div class="f-mail">
                 <input type="email" placeholder="Your Email">
                 <i class='bx bx-envelope'></i>
-            </div>
+            </div> -->
             <hr>
         </div>
     </div>
@@ -250,6 +258,10 @@
             || 
             <a href="tel:+917051807964" target="_blank">
                 <i class="bi bi-phone"></i> 7051807964
+            </a>
+            ||
+            <a href="tel:+917006204613" target="_blank">
+                <i class="bi bi-phone"></i> 7006204613
             </a>
         </p>
     </div>
@@ -269,7 +281,7 @@
 
     <div class="f-design">
         <div class="f-design-txt container">
-            <p>Design and Developed By <a href="#">Musaib</a> | All rights reserved by <a
+            <p>Design and Developed By <a href="https://www.linkedin.com/in/musaib-gul-5387ab20b" target="_blank">Musaib</a> | All rights reserved by <a
                     href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
         </div>
     </div>
