--- a/singleProduct.html
+++ b/singleProduct.html
@@ -32,6 +32,10 @@
             <a href="tel:+917051807964" target="_blank">
               <i class="bi bi-phone"></i> 7051807964
             </a>
+              ||
+              <a href="tel:+917006204613" target="_blank">
+                <i class="bi bi-phone"></i> 7006204613
+              </a>
           </p>
         </div>
         <div class="sign_in_up">
@@ -126,98 +130,83 @@
         <div class="best-seller"></div>
       </div>
     </section>
-    <footer>
-      <div class="footer-container container">
-        <div class="content_1">
-          <img
-            src="assets/home/logo.PNG"
-            alt="Kashmir Dry Fruits Logo"
-          />
-          <p>
-            Bringing you the finest selection of premium Kashmiri dry fruits,
-            known for their unmatched quality and authenticity. Our commitment
-            to quality ensures you experience the true essence of Kashmir in
-            every bite.
-          </p>
-        </div>
+<footer>
+  <div class="footer-container container">
+    <div class="content_1">
+      <img src="assets/home/logo.PNG" alt="Kashmir Dry Fruits Logo">
+      <p>Bringing you the finest selection of premium Kashmiri dry fruits, known for their unmatched quality and
+        authenticity. Our commitment to quality ensures you experience the true essence of Kashmir in every
+        bite.</p>
 
-        <div class="content_2">
-          <h4>SHOP OUR COLLECTION</h4>
-          <a href="#sellers">Kashmiri Walnuts</a>
-          <a href="#sellers">Almonds & Saffron</a>
-          <a href="#sellers">Dried Fruits & Berries</a>
-          <a href="#sellers">Gift Boxes</a>
-        </div>
+    </div>
 
-        <div class="content_3">
-          <h4>SUPPORT</h4>
-          <a href="#contact">Contact Us</a>
-          <a href="https://payment-method-sb.netlify.app/" target="_blank"
-            >Payment Method</a
-          >
-          <a href="https://delivery-status-sb.netlify.app/" target="_blank"
-            >Delivery Information</a
-          >
-          <a href="https://codepen.io/sandeshbodake/full/Jexxrv" target="_blank"
-            >Return & Exchange</a
-          >
-        </div>
+    <div class="content_2">
+      <h4>SHOP OUR COLLECTION</h4>
+      <a href="#sellers">Kashmiri Walnuts</a>
+      <a href="#sellers">Almonds & Saffron</a>
+      <a href="products.html">Dried Fruits & Berries</a>
+      <a href="#sellers">Gift Boxes</a>
+    </div>
 
-        <div class="content_4">
-          <h4>SUBSCRIBE TO OUR NEWSLETTER</h4>
-          <p>
-            Stay updated on our latest offerings of authentic Kashmiri dry
-            fruits, seasonal collections, and exclusive discounts!
-          </p>
-          <div class="f-mail">
-            <input type="email" placeholder="Your Email" />
-            <i class="bx bx-envelope"></i>
-          </div>
-          <hr />
-        </div>
-      </div>
+    <div class="content_3">
+      <h4>SUPPORT</h4>
+      <a href="#contact">Contact Us</a>
+      <!-- <a href="" target="_blank">Payment Method</a>
+            <a href="" target="_blank">Delivery Information</a>
+            <a href="" target="_blank">Return & Exchange</a> -->
+    </div>
 
-      <div class="contact-info">
-        <div class="head-txt">
-          <p>
-            Contact us
-            <a href="tel:+917006541433" target="_blank">
-              <i class="bi bi-phone"></i> 7006541433
-            </a>
-            ||
-            <a href="tel:+917051807964" target="_blank">
-              <i class="bi bi-phone"></i> 7051807964
-            </a>
-          </p>
-        </div>
-        <div class="sign_in_up">
-          <a
-            href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm"
-            target="_blank"
-          >
-            <i class="bi bi-instagram"></i>
-          </a>
-          <a href="#" target="_blank">
-            <i class="bi bi-facebook"></i>
-          </a>
-          <a href="mailto:kongposh06@gmail.com">
-            <i class="bi bi-envelope-at-fill"></i>
-          </a>
-        </div>
-      </div>
+    <div class="content_4">
+      <h4>Visit Us</h4>
+      <p>Stay updated on our latest offerings of authentic Kashmiri dry fruits, seasonal collections, and
+        exclusive
+        discounts!</p>
+      <!-- <div class="f-mail">
+                <input type="email" placeholder="Your Email">
+                <i class='bx bx-envelope'></i>
+            </div> -->
+      <hr>
+    </div>
+  </div>
 
-      <div class="f-design">
-        <div class="f-design-txt container">
-          <p>
-            Design and Developed By <a href="#">Musaib</a> | All rights reserved
-            by
-            <a href="https://duhasoftwares.com/" target="_blank"
-              >Duha-Softwares</a
-            >
-          </p>
-        </div>
-      </div>
-    </footer>
+  <div class="contact-info">
+    <div class="head-txt">
+      <p>
+        Contact us
+        <a href="tel:+917006541433" target="_blank">
+          <i class="bi bi-phone"></i> 7006541433
+        </a>
+        ||
+        <a href="tel:+917051807964" target="_blank">
+          <i class="bi bi-phone"></i> 7051807964
+        </a>
+        ||
+        <a href="tel:+917006204613" target="_blank">
+          <i class="bi bi-phone"></i> 7006204613
+        </a>
+      </p>
+    </div>
+    <div class="sign_in_up">
+      <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="#" target="_blank">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="mailto:kongposh06@gmail.com">
+        <i class="bi bi-envelope-at-fill"></i>
+      </a>
+    </div>
+  </div>
+
+
+  <div class="f-design">
+    <div class="f-design-txt container">
+      <p>Design and Developed By <a href="https://www.linkedin.com/in/musaib-gul-5387ab20b" target="_blank">Musaib</a> |
+        All rights reserved by <a href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
+    </div>
+  </div>
+</footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
