--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
+            <script type="application/ld+json">
+                      {
+                        "@context": "https://schema.org",
+                        "@type": "Product",
+                        "name": "KongPosh Premium Dry Fruits",
+                        "description": "Premium quality dry fruits from Kashmir.",
+                        "review": [
+                          {
+                            "@type": "Review",
+                            "author": {
+                              "@type": "Person",
+                              "name": "John Doe"
+                            },
+                            "reviewBody": "KongPosh offers the best dry fruits I've ever had. The almonds were fresh, and the saffron was top quality!",
+                            "reviewRating": {
+                              "@type": "Rating",
+                              "ratingValue": "5",
+                              "bestRating": "5"
+                            },
+                            "datePublished": "2024-11-17"
+                          }
+                        ]
+                      }
+                    </script>
 </head>
 
 <body>
@@ -209,6 +233,40 @@
                 </div>
             
             </section>
+<!-- Review Section -->
+<!-- Review Form Section -->
+<section id="news">
+    <div class="news-heading">
+        <p>Our Happy Customers</p>
+        <h2>Reviews</h2>
+    </div>
+
+    <!-- Form to Submit Review -->
+    <div class="review-form-container">
+        <form id="review-form">
+            <input type="text" id="review-name" placeholder="Your Name" required>
+            <textarea id="review-message" placeholder="Write your review" required></textarea>
+            <div class="rating">
+                <label for="rating">Rating:</label>
+                <select id="rating">
+                    <option value="1">1 Star</option>
+                    <option value="2">2 Stars</option>
+                    <option value="3">3 Stars</option>
+                    <option value="4">4 Stars</option>
+                    <option value="5" selected>5 Stars</option>
+                </select>
+            </div>
+            <button type="submit">Submit Review</button>
+        </form>
+    </div>
+
+    <!-- Displaying the Reviews -->
+    <div class="l-news container" id="reviews-container">
+        <!-- Reviews will be displayed here dynamically -->
+    </div>
+</section>
+
+            
 <footer>
     <div class="footer-container container">
         <div class="content_1">
@@ -289,6 +347,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="./main.js"></script>
+   
+
 </body>
 
 
