--- a/singleProduct.html
+++ b/singleProduct.html
@@ -1,17 +1,24 @@
 <html lang="en">
   <head>
     <title>KongPosh</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0">
-        <meta name="description"
-          content="Kongposh - Offering premium quality dry fruits, authentic Kashmiri saffron, spices, and honey sourced directly from the pristine valleys of Jammu and Kashmir, India.">
-        <meta name="keywords"
-          content="dry fruits, saffron, Kashmiri saffron, Kashmiri spices, honey, premium dry fruits Jammu and Kashmir, dry fruit shop India, buy saffron online, Kashmiri honey, exotic spices">
-        <meta name="author" content="Duha-Softwares">
-        <meta name="robots" content="index, follow">
-        <meta name="type" content="website">
-        <link rel="canonical" href="https://kongposh.co.in/">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,maximum-scale=1.0"
+    />
+    <meta
+      name="description"
+      content="Kongposh - Offering premium quality dry fruits, authentic Kashmiri saffron, spices, and honey sourced directly from the pristine valleys of Jammu and Kashmir, India."
+    />
+    <meta
+      name="keywords"
+      content="dry fruits, saffron, Kashmiri saffron, Kashmiri spices, honey, premium dry fruits Jammu and Kashmir, dry fruit shop India, buy saffron online, Kashmiri honey, exotic spices"
+    />
+    <meta name="author" content="Duha-Softwares" />
+    <meta name="robots" content="index, follow" />
+    <meta name="type" content="website" />
+    <link rel="canonical" href="https://kongposh.co.in/" />
     <link rel="stylesheet" href="./styles/sp.css" />
     <link
       rel="stylesheet"
@@ -32,10 +39,10 @@
             <a href="tel:+917051807964" target="_blank">
               <i class="bi bi-phone"></i> 7051807964
             </a>
-              ||
-              <a href="tel:+917006204613" target="_blank">
-                <i class="bi bi-phone"></i> 7006204613
-              </a>
+            ||
+            <a href="tel:+917006204613" target="_blank">
+              <i class="bi bi-phone"></i> 7006204613
+            </a>
           </p>
         </div>
         <div class="sign_in_up">
@@ -115,7 +122,7 @@
           <div class="cart mt-4 align-items-center">
             <button
               class="btn btn-danger addtocart text-uppercase mr-2 px-4"
-              onclick="addToCart('₹{product.id}', '₹{product.name}', '₹{product.price}', '₹{product.image}', 1)"
+              onclick="addToCart()"
             >
               Add to Cart
             </button>
@@ -130,83 +137,98 @@
         <div class="best-seller"></div>
       </div>
     </section>
-<footer>
-  <div class="footer-container container">
-    <div class="content_1">
-      <img src="assets/home/logo.PNG" alt="Kashmir Dry Fruits Logo">
-      <p>Bringing you the finest selection of premium Kashmiri dry fruits, known for their unmatched quality and
-        authenticity. Our commitment to quality ensures you experience the true essence of Kashmir in every
-        bite.</p>
+    <footer>
+      <div class="footer-container container">
+        <div class="content_1">
+          <img src="assets/home/logo.PNG" alt="Kashmir Dry Fruits Logo" />
+          <p>
+            Bringing you the finest selection of premium Kashmiri dry fruits,
+            known for their unmatched quality and authenticity. Our commitment
+            to quality ensures you experience the true essence of Kashmir in
+            every bite.
+          </p>
+        </div>
 
-    </div>
+        <div class="content_2">
+          <h4>SHOP OUR COLLECTION</h4>
+          <a href="#sellers">Kashmiri Walnuts</a>
+          <a href="#sellers">Almonds & Saffron</a>
+          <a href="products.html">Dried Fruits & Berries</a>
+          <a href="#sellers">Gift Boxes</a>
+        </div>
 
-    <div class="content_2">
-      <h4>SHOP OUR COLLECTION</h4>
-      <a href="#sellers">Kashmiri Walnuts</a>
-      <a href="#sellers">Almonds & Saffron</a>
-      <a href="products.html">Dried Fruits & Berries</a>
-      <a href="#sellers">Gift Boxes</a>
-    </div>
-
-    <div class="content_3">
-      <h4>SUPPORT</h4>
-      <a href="#contact">Contact Us</a>
-      <!-- <a href="" target="_blank">Payment Method</a>
+        <div class="content_3">
+          <h4>SUPPORT</h4>
+          <a href="#contact">Contact Us</a>
+          <!-- <a href="" target="_blank">Payment Method</a>
             <a href="" target="_blank">Delivery Information</a>
             <a href="" target="_blank">Return & Exchange</a> -->
-    </div>
+        </div>
 
-    <div class="content_4">
-      <h4>Visit Us</h4>
-      <p>Stay updated on our latest offerings of authentic Kashmiri dry fruits, seasonal collections, and
-        exclusive
-        discounts!</p>
-      <!-- <div class="f-mail">
+        <div class="content_4">
+          <h4>Visit Us</h4>
+          <p>
+            Stay updated on our latest offerings of authentic Kashmiri dry
+            fruits, seasonal collections, and exclusive discounts!
+          </p>
+          <!-- <div class="f-mail">
                 <input type="email" placeholder="Your Email">
                 <i class='bx bx-envelope'></i>
             </div> -->
-      <hr>
-    </div>
-  </div>
+          <hr />
+        </div>
+      </div>
 
-  <div class="contact-info">
-    <div class="head-txt">
-      <p>
-        Contact us
-        <a href="tel:+917006541433" target="_blank">
-          <i class="bi bi-phone"></i> 7006541433
-        </a>
-        ||
-        <a href="tel:+917051807964" target="_blank">
-          <i class="bi bi-phone"></i> 7051807964
-        </a>
-        ||
-        <a href="tel:+917006204613" target="_blank">
-          <i class="bi bi-phone"></i> 7006204613
-        </a>
-      </p>
-    </div>
-    <div class="sign_in_up">
-      <a href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm" target="_blank">
-        <i class="bi bi-instagram"></i>
-      </a>
-      <a href="#" target="_blank">
-        <i class="bi bi-facebook"></i>
-      </a>
-      <a href="mailto:kongposh06@gmail.com">
-        <i class="bi bi-envelope-at-fill"></i>
-      </a>
-    </div>
-  </div>
+      <div class="contact-info">
+        <div class="head-txt">
+          <p>
+            Contact us
+            <a href="tel:+917006541433" target="_blank">
+              <i class="bi bi-phone"></i> 7006541433
+            </a>
+            ||
+            <a href="tel:+917051807964" target="_blank">
+              <i class="bi bi-phone"></i> 7051807964
+            </a>
+            ||
+            <a href="tel:+917006204613" target="_blank">
+              <i class="bi bi-phone"></i> 7006204613
+            </a>
+          </p>
+        </div>
+        <div class="sign_in_up">
+          <a
+            href="https://www.instagram.com/kongposh.co.in?utm_source=qr&igsh=dDEybGEyN2NlaHpm"
+            target="_blank"
+          >
+            <i class="bi bi-instagram"></i>
+          </a>
+          <a href="#" target="_blank">
+            <i class="bi bi-facebook"></i>
+          </a>
+          <a href="mailto:kongposh06@gmail.com">
+            <i class="bi bi-envelope-at-fill"></i>
+          </a>
+        </div>
+      </div>
 
-
-  <div class="f-design">
-    <div class="f-design-txt container">
-      <p>Design and Developed By <a href="https://www.linkedin.com/in/musaib-gul-5387ab20b" target="_blank">Musaib</a> |
-        All rights reserved by <a href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
-    </div>
-  </div>
-</footer>
+      <div class="f-design">
+        <div class="f-design-txt container">
+          <p>
+            Design and Developed By
+            <a
+              href="https://www.linkedin.com/in/musaib-gul-5387ab20b"
+              target="_blank"
+              >Musaib</a
+            >
+            | All rights reserved by
+            <a href="https://duhasoftwares.com/" target="_blank"
+              >Duha-Softwares</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
