--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <i class="bi bi-phone"></i> 7006204613
                                 </a></p>
                         <h3>Our Location</h3>
-                        <p>Kammu And Kashmir Lethpora.<br>192122</p>
+                        <p>Jammu And Kashmir Lethpora.<br>192122</p>
                     </div>
                         <div class="form-details">
                             <input minlength="3" max="50" type="text" name="name" id="name"
