updated products and added privacy-policy page

--- a/cart.html
+++ b/cart.html
@@ -67,6 +67,8 @@
         <ul class="menu-items">
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Shop</a></li>
+            <!-- <li><a href="#contact">Contact Us</a></li> -->
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
           <!-- <li><a href="#news">Blog</a></li>
           <li><a href="#contact">Contact</a></li> -->
         </ul>
