--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="products.html">Shop</a></li>
                 <li><a href="cart.html">Cart</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+
+
             </ul>
             <div class="logo">
                 <img src="assets/home/logo.PNG" alt="not found">
@@ -229,16 +232,17 @@
             <a href="#sellers">Gift Boxes</a>
         </div>
 
-        <div class="content_3">
-            <h4>SUPPORT</h4>
-            <a href="#contact">Contact Us</a>
+        <!-- <div class="content_3"> -->
+            <!-- <h4>SUPPORT</h4> -->
+          
             <!-- <a href="" target="_blank">Payment Method</a>
             <a href="" target="_blank">Delivery Information</a>
             <a href="" target="_blank">Return & Exchange</a> -->
-        </div>
+        <!-- </div> -->
 
         <div class="content_4">
             <h4>Visit Us</h4>
+            <a href="#contact">Contact Us</a>
             <p>Stay updated on our latest offerings of authentic Kashmiri dry fruits, seasonal collections, and
                 exclusive
                 discounts!</p>
