--- a/singleProduct.html
+++ b/singleProduct.html
@@ -75,6 +75,7 @@
           <li><a href="products.html">Shop</a></li>
           <li><a href="cart.html">Cart</a></li>
           <!-- <li><a href="">Contact</a></li> -->
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
         </ul>
         <div class="logo">
           <img src="assets/home/logo.PNG" alt="not found" />
