--- a/products.html
+++ b/products.html
@@ -68,7 +68,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Shop</a></li>
           <li><a href="cart.html">Cart</a></li>
-          <!-- <li><a href="#contact">Contact</a></li> -->
+          <!-- <li><a href="#contact">Contact Us</a></li> -->
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
         </ul>
         <div class="logo">
           <img src="assets/home/logo.PNG" alt="not found" />
@@ -78,7 +79,7 @@
 
     <section id="sellers">
       <div id="sellers" class="seller container">
-        <h2>Top Sales</h2>
+        <h2>All Products</h2>
         <div class="best-seller"></div>
       </div>
     </section>
