updated footer css

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -188,15 +188,15 @@
 
             <div class="f-design">
                 <div class="f-design-txt container">
-                    <p>Design and Developed By <a href="https://www.linkedin.com/in/musaib-gul-5387ab20b"
+                    <p>Design and Developed By <a  href="https://www.linkedin.com/in/musaib-gul-5387ab20b"
                             target="_blank">Musaib</a> | All rights reserved by <a href="https://duhasoftwares.com/"
                             target="_blank">Duha-Softwares</a></p>
                 </div>
             </div>
         </footer>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="./main.js"></script>
+        <script src="./main.js"></script> -->
 
 
 </body>
