--- a/products.html
+++ b/products.html
@@ -156,7 +156,7 @@
 
   <div class="f-design">
     <div class="f-design-txt container">
-      <p>Design and Developed By <a href="https://www.linkedin.com/in/musaib-gul-5387ab20b" target="_blank">Musaib</a> |
+      <p>Design and Developed By <a href="https://www.linkedin.com/in/musaib-gul-5387ab20b" target="_blank">Er.Musaib</a> |
         All rights reserved by <a href="https://duhasoftwares.com/" target="_blank">Duha-Softwares</a></p>
     </div>
   </div>
