--- a/singleProduct.html
+++ b/singleProduct.html
@@ -220,7 +220,7 @@
             <a
               href="https://www.linkedin.com/in/musaib-gul-5387ab20b"
               target="_blank"
-              >Musaib</a
+              >Er.Musaib</a
             >
             | All rights reserved by
             <a href="https://duhasoftwares.com/" target="_blank"
