--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -65,7 +65,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Shop</a></li>
                 <li><a href="cart.html">Cart</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!-- <li><a href="#contact">Contact</a></li> -->
             </ul>
             <div class="logo">
                 <img src="assets/home/logo.PNG" alt="not found">
@@ -189,7 +189,7 @@
             <div class="f-design">
                 <div class="f-design-txt container">
                     <p>Design and Developed By <a  href="https://www.linkedin.com/in/musaib-gul-5387ab20b"
-                            target="_blank">Musaib</a> | All rights reserved by <a href="https://duhasoftwares.com/"
+                            target="_blank">Er.Musaib</a> | All rights reserved by <a href="https://duhasoftwares.com/"
                             target="_blank">Duha-Softwares</a></p>
                 </div>
             </div>
